feat: add employee
